RESOLVED FIXED281377
[IFC][Ruby] Incorrect wrapping with fractional content size
https://bugs.webkit.org/show_bug.cgi?id=281377
Summary [IFC][Ruby] Incorrect wrapping with fractional content size
alan
Reported 2024-10-12 06:09:02 PDT
ssia
Attachments
[fast-cq]Patch (9.59 KB, patch)
2024-10-12 06:10 PDT, alan
no flags
alan
Comment 1 2024-10-12 06:10:45 PDT
Created attachment 472918 [details] [fast-cq]Patch
EWS
Comment 2 2024-10-13 12:53:41 PDT
Committed 285100@main (3aaf0b3e88d9): <https://commits.webkit.org/285100@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 472918 [details].
Radar WebKit Bug Importer
Comment 3 2024-10-13 12:54:16 PDT
Note You need to log in before you can comment on or make changes to this bug.