[IFC][Ruby] Incorrect wrapping with fractional content size https://bugs.webkit.org/show_bug.cgi?id=281377

Reviewed by Antti Koivisto.

See comment in InlineDisplayContentBuilder::setInlineBoxGeometry.

* LayoutTests/fast/ruby/incorrect-wrapping-with-fractional-content-size-expected.html: Added.
* LayoutTests/fast/ruby/incorrect-wrapping-with-fractional-content-size.html: Added.
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.cpp:
(WebCore::Layout::InlineDisplayContentBuilder::processNonBidiContent):
(WebCore::Layout::InlineDisplayContentBuilder::adjustVisualGeometryForDisplayBox):
(WebCore::Layout::InlineDisplayContentBuilder::processBidiContent):
(WebCore::Layout::InlineDisplayContentBuilder::setInlineBoxGeometry):
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayContentBuilder.h:

Canonical link: https://commits.webkit.org/285100@main